k8s/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-mongo
  namespace: microservices
spec:
  clusterIP: None
  selector:
    app: payment-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: payment-mongo
  namespace: microservices
spec:
  serviceName: payment-mongo
  replicas: 1
  selector:
    matchLabels:
      app: payment-mongo
  template:
    metadata:
      labels:
        app: payment-mongo
    spec:
      containers:
        - name: payment-mongo
          image: mongo:7.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: microservices
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: payment-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "1Gi"
            requests:
              cpu: "200m"
              memory: "512Mi"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: microservices
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
